bk_ida/gobmkida/g0/getopt_internal
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/getopt_internal/src/utils/getopt.c:1014:21: error: use of undeclared identifier '_getopt_initialized'
if ( !gg_optind || !_getopt_initialized ) 
                    ^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/getopt_internal/src/utils/getopt.c:1019:1: error: use of undeclared identifier '_getopt_initialized'; did you mean '__getopt_initialized'?
_getopt_initialized = 1; 
^~~~~~~~~~~~~~~~~~~
__getopt_initialized
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/getopt_internal/src/utils/getopt.c:132:5: note: '__getopt_initialized' declared here
int __getopt_initialized;
    ^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/getopt_internal/src/utils/getopt.c:1191:22: error: use of undeclared identifier 'unk_58C728'
nextchar = ( char *)&unk_58C728; 
                     ^
3 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/getopt_internal/src/obj/5/getopt.o] Error 1
